# gst-qt

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediaitem.cpp  mediaitem.h  player.cpp  player.h  playlist_delegate.cpp  playlist_delegate.h  playlist_manager.cpp  playlist_manager.h  playlist_view.cpp  playlist_view.h
